# securedata

./: .gitignore  LICENSE.md  README.md  secureData.py  secureDataNew.py  setup.cfg
src/securedata/: __main__.py  build.py  mail.py  securedata.py
src/securedata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
