[metadata]
name = securedata
version = 2021.12.26.9
author = Tyler Woodfin
author_email = tyler@tylerwoodfin.com
description = Easily manage data storage and logging across repos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylerjwoodfin/SecureData
project_urls =
Bug Tracker = https://github.com/tylerjwoodfin/SecureData/issues
py_modules=["securedata"]
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
[options]
package_dir =
    = src

packages = find:
python_requires = >=3.6
[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    securedata = securedata.securedata:main